# face-auth

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  copr.yml  release.yml
crates/face-auth-core/: Cargo.toml
crates/face-auth-core/src/: config.rs  enrollment.rs  framing.rs  geometry.rs  lib.rs  protocol.rs
crates/face-auth-models/: Cargo.toml
crates/face-auth-models/src/: alignment.rs  detection.rs  lib.rs  liveness.rs  quality.rs  recognition.rs
crates/face-auth-platform/: Cargo.toml
crates/face-auth-platform/src/: ir_emitter.rs  lib.rs
crates/face-authd/: Cargo.toml
crates/face-authd/src/: camera.rs  error.rs  inference.rs  main.rs  model_store.rs  session.rs
crates/face-enroll/: Cargo.toml
crates/face-enroll/src/: configure.rs  debug_ui.rs  main.rs
crates/pam-face/: Cargo.toml
crates/pam-face/src/: lib.rs
docs/: agents.md  decisions.md  plan.md  todo.md
packaging/: Containerfile  face-auth.spec
platform/: config.toml
platform/pam/: gdm-password.conf.snippet  kscreenlocker.conf  sddm.conf.snippet
platform/pam.d/: face-auth-test  face-auth-test-phase2
platform/selinux/: face_auth.te
platform/systemd/: face-authd.service
scripts/: build-srpm.sh  download-models.sh  install.sh  uninstall.sh
tests/phase0/: Cargo.toml  build.rs
tests/phase0/src/: daemon_stub.rs  ir_discover.rs  test_camera.rs  test_onnx.rs  test_pam_phase2.rs  test_pam_stub.rs  test_video_access.rs
