[package]
name        = "face-auth-core"
version     = "0.1.0"
edition     = "2021"
description = "Shared types, IPC protocol, config — no OS deps"

[dependencies]
serde    = { workspace = true }
bincode  = { workspace = true }
config   = { workspace = true }
thiserror = { workspace = true }
libc     = { workspace = true }

[dev-dependencies]
tempfile = "3"
