[package]
name        = "face-authd"
version     = "0.1.0"
edition     = "2021"
description = "Face authentication daemon"

[[bin]]
name = "face-authd"
path = "src/main.rs"

[dependencies]
face-auth-core     = { path = "../face-auth-core" }
face-auth-platform = { path = "../face-auth-platform" }
face-auth-models   = { path = "../face-auth-models" }
serde              = { workspace = true }
bincode            = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }
rand               = { workspace = true }
v4l                = "0.14"
libc               = { workspace = true }
